revised 2.4, 2.5; major bug fix in FullDjangoModelPermissions

--- a/Notes/Part 2/4. Django Authentication System.md
+++ b/Notes/Part 2/4. Django Authentication System.md
@@ -51,7 +51,7 @@
 
 - Sets the `request.user` attribute.
 
-  - Could be an instance of `AnonymousUser` or a logged-in `User`.
+  - Which could be an instance of `AnonymousUser` or a logged-in `User`.
 
 <br>
 
@@ -96,7 +96,7 @@
 
 - First approach **modifies the user table**, second approach creates a **separate table with a foreign key**.
 - You **cannot switch to inheritance** mid-project; it's tricky and discouraged.
-- So most of the time, use the **second (composition) approach**.
+- Most of the time, we use the **second (composition) approach**.
 
 ## Extending the User Model
 
@@ -135,11 +135,9 @@ class User(AbstractUser):
 In `settings.py`, set:
 
 ```py
-# Telling django to use this custom User model (defined in `core.models`, extends django's `AbstractUser`) for auth:
+# Telling django to use this custom User model for auth:
 AUTH_USER_MODEL = "core.User"
 ```
-
-### Swapping the user model mid-project? (NOT recommended)
 
 If another app (e.g. `likes`) uses the old user model, don't import custom model directly (`from core.models import User`), breaks app reusability.  
 Instead, use:
@@ -151,7 +149,7 @@ settings.AUTH_USER_MODEL
 
 > Keeps dependent app decoupled and reusable.
 
-And do:
+### Swapping the user model mid-project? (NOT recommended)
 
 ```sh
 python manage.py makemigrations
@@ -188,12 +186,14 @@ python manage.py migrate
 
 ### Admin panel fixes
 
-- After recreating DB:
+After recreating DB:
 
-  - Create a superuser: `python manage.py createsuperuser`
-  - `User` no longer shows under `auth`, must be registered under `core`.
+- Create superuser: `python manage.py createsuperuser`
+- `User` no longer shows under `auth`, must be registered under `core`.
 
 #### In `core/admin.py`:
+
+Register the new user model:
 
 ```py
 from django.contrib.auth.admin import UserAdmin as BaseUserAdmin
@@ -204,7 +204,9 @@ class UserAdmin(BaseUserAdmin):
     ...  # see `core/admin.py`
 ```
 
-> Ensure `email` is included in `add_fieldsets`, or creation fails due to unique constraint.
+Override `add_fieldsets` to add "first_name", "last_name", "email" to `Add user` page ([/admin/core/user/add](http://127.0.0.1:8000/admin/core/user/add)).
+
+> Ensure `email` is included in `add_fieldsets`, else creation fails due to unique constraint.
 
 ### Summary: How to properly extend the user model
 
@@ -236,14 +238,14 @@ user = models.OneToOneField(settings.AUTH_USER_MODEL, on_delete=models.CASCADE)
 
 ### Update `__str__`
 
-- Since `first_name` and `last_name` were removed, access them via the `user`:
+- Since `first_name` and `last_name` were removed, access them via `user`:
 
 ```py
 def __str__(self):
     return f"{self.user.first_name} {self.user.last_name}"
 ```
 
-### Update <Model>Admin
+### Update \<Model\>Admin
 
 - In `CustomerAdmin`:
 
@@ -302,9 +304,9 @@ Each permission record has:
 
 Example:
 
-- For the `User` model in the `core` app, the permission `Can view user` will have:
+- For the `User` model in the `core` app, the permission `Can view user` has:
 
-  - `content_type_id`: (e.g., `19` for the `User` model)
+  - `content_type_id`: `19`
   - `codename`: `view_user`
 
 ### Creating and Assigning Groups
@@ -314,7 +316,7 @@ Example:
    - Create a group (e.g., **Customer Service**)
    - Assign model-level permissions (e.g., for `Customer`, `Order`, and `OrderItem`)
 
-2. Assign users (e.g., **TestUser**) to the group:
+2. Assign users to the group (from `Change user` page):
 
    - Mark them as `is_staff = True` so they can access admin
    - Add them to the appropriate group
