--- a/Notes/Part 2/5. Securing APIs.md
+++ b/Notes/Part 2/5. Securing APIs.md
@@ -151,17 +151,13 @@ We use **tokens** in stateless APIs because they **remove the need for server-si
 #### 5. Bonus: When sessions might still be better
 
 - Small apps where scaling isn’t an issue.
-- You want easy revocation of logins without complex token blacklisting.
+- You want easy revocation (revoke) of logins without complex token blacklisting.
 - Browser-based apps that benefit from cookie-based auth.
 
 </details>
 
 <details>
 <summary>Read more (3)</summary>
-
-<br>
-
-REST APIs are **stateless** because each request from the client to the server must contain **all the information needed** for the server to understand and process it — the server does **not** remember anything about previous requests from that client.
 
 ### Why this is done (benefits):
 
@@ -205,7 +201,7 @@ Statelessness in REST makes APIs **scalable, fault-tolerant, simpler, and faster
 
 - Django has a built-in authentication system but **no API layer**.
 
-- [Djoser](https://djoser.readthedocs.io) is a RESTful implementation of Django’s auth system.
+- [Djoser](https://djoser.readthedocs.io) is a RESTful implementation of (or REST API around) Django’s auth system.
 
 - Provides endpoints for:
 
@@ -214,7 +210,7 @@ Statelessness in REST makes APIs **scalable, fault-tolerant, simpler, and faster
   - Password reset
   - Retrieve current user
 
-- Saves time by avoiding manual implementation in every project.
+- Saves time by avoiding need of manual implementation in every project.
 
 ### Installation & Setup
 
@@ -253,8 +249,6 @@ Statelessness in REST makes APIs **scalable, fault-tolerant, simpler, and faster
 2. [See](https://djoser.readthedocs.io/en/latest/authentication_backends.html#json-web-token-authentication)
 
 ## Registering Users
-
-### Registration Process
 
 - Client sends `POST` request to `/users` with:
 
@@ -301,12 +295,12 @@ Statelessness in REST makes APIs **scalable, fault-tolerant, simpler, and faster
 
   - Keep `CustomUserCreateSerializer` only for user model fields.
 
-  - Capture `birth_date` in separate **Profile API**.
+  - Capture `birth_date` in separate **Profile API** (`/customers`).
 
   - Client: User creation form would show the fields from both the models, and two subsequent requests would be sent:
 
     1. `POST /users` → Create user account.
-    2. `POST /profile` → Save profile-related fields.
+    2. `POST /customers` → Save profile-related fields.
 
 **Key Principle**
 
@@ -320,7 +314,7 @@ Statelessness in REST makes APIs **scalable, fault-tolerant, simpler, and faster
 
 ### Steps to Implement
 
-In the `store` app (where `Customer` model is defined):
+In the `store` app (where `Customer` model is):
 
 #### 1. Serializer
 
@@ -395,7 +389,7 @@ router.register(prefix='customers', viewset=views.CustomerViewSet)
 
 ### Logout
 
-- Simply **remove token** from client storage.
+- Simply **remove token** from client storage. (**Client would do it.**)
 - No logout endpoint needed (as tokens not stored in DB).
 
 ## Inspecting a JSON Web Token
@@ -415,18 +409,19 @@ Official site: [jwt.io](https://jwt.io)
 
      - `token_type`: `"access"` or `"refresh"`
      - `exp`: Expiration time
+     - `iat`: Issued at
      - `jti`: Unique token ID
      - `user_id`: ID of authenticated user (for our token we got from `/auth/jwt/create`)
 
 3. **Signature**
 
-   - Created from **Header + Payload + Secret** using the specified algorithm.
+   - Created from **Header + Payload + Secret** (django secret key) using the specified algorithm.
    - Ensures integrity: any change to Header/Payload invalidates signature.
 
 ### **How It’s Created**
 
 1. User logs in with valid credentials.
-2. Server fetches user data (e.g., `user_id`).
+2. Server fetches user data (e.g., `user_id`, ...).
 3. Creates Header & Payload.
 4. Generates Signature using a **server-only secret**.
 
@@ -435,6 +430,8 @@ Official site: [jwt.io](https://jwt.io)
 - If token is modified (e.g., `user_id` changed), signature no longer matches → token is rejected.
 - Hackers **cannot** regenerate signature without the server’s secret key.
 - Secret must remain secure on the server.
+
+> The reason why `settings.SECRET_KEY` **must not** be pushed to GitHub.
 
 ## Refreshing Tokens
 
@@ -446,7 +443,12 @@ Official site: [jwt.io](https://jwt.io)
 - **Refreshing tokens**:
 
   - Client calls `/auth/jwt/refresh` endpoint with **Refresh Token**.
-  - Server issues a **new Access Token**.
+  - Server issues a **new Access Token**, and the intended endpoint is called again.
+
+  > Note:
+  >
+  > 1. This all happens without the user knowing.
+  > 2. If refresh token is expired as well, **then** user needs to login with the password again.
 
 ## Getting the Current User
 
@@ -499,7 +501,7 @@ So, now:
 - **IsAuthenticated** – Only authenticated users can access.
 - **IsAdminUser** – Only admin users can access.
 - **IsAuthenticatedOrReadOnly** – Read allowed for all; write allowed for authenticated users.
-- Can also **create custom permission classes**.
+- We can also **create custom permission classes**.
 
 ### Applying Permissions
 
@@ -563,6 +565,8 @@ class CustomerViewSet(...):
         return [IsAuthenticated()]
 ```
 
+Notice:
+
 - `permission_classes` attribute → list of **classes**.
 - `get_permissions()` method → list of **instances** (objects).
 
@@ -582,13 +586,20 @@ class CustomerViewSet(...):
    In `has_permission()`:
 
    - Allow request if `request.method` is in `permissions.SAFE_METHODS` (`GET`, `HEAD`, `OPTIONS`).
-   - Otherwise, allow only if `request.user.is_authenticated` **and** `request.user.is_staff` is `True`.
+   - Otherwise, allow only if `request.user` is not None **and** `request.user.is_staff` is `True`.
+   - (Followed the similar pattern as `BasePermission` classes in `rest_framework.permissions`, like `IsAuthenticated`, `IsAdminUser`, etc.)
+
+   > `request.user` is redundant in the statement `return request.user and request.user.is_staff`, right?  
+   > Wrong. Read 3rd point ("3. Why the Safeguard is Necessary") in first response in [Gemini](https://g.co/gemini/share/c7984244a80f).
 
 3. Apply this permission to relevant viewsets:
 
    - **Products**: `permission_classes = [IsAdminOrReadOnly]`.
+
    - **Collections**: same as products.
+
    - **Shopping Carts**: no permission restrictions (anonymous allowed).
+
    - **Customers**:
 
      - Switch to `ModelViewSet` for full CRUD.
@@ -600,89 +611,6 @@ class CustomerViewSet(...):
 - Anonymous users: Can only read products/collections, create shopping carts, but cannot modify data.
 - Authenticated non-admin users: Can access their own profile.
 - Admin users: Full access to products, collections, customers.
-
-<br>
-
-<details>
-<summary>Read more</summary>
-
-### Goal
-
-- Restrict **modifications** to certain resources to **admin users**.
-- Allow **read-only** access to anyone (including anonymous users) where appropriate.
-
-### Problem
-
-- Products endpoint is open to everyone for all actions.
-- Need:
-  - Products & collections: Anyone can read, only admins can modify.
-  - Shopping carts: Anyone can create.
-  - Customers: Only admins manage customers; authenticated users can access their own profile.
-
-### Solution: Custom Permissions
-
-Create `permissions.py` in the app.
-
-> Take a look at definitions of built-in permissions like `rest_framework.permissions.IsAuthenticated`.
-
-```py
-from rest_framework import permissions
-
-class IsAdminOrReadOnly(permissions.BasePermission):
-    def has_permission(self, request, view):
-        if request.method in permissions.SAFE_METHODS:  # GET, HEAD, OPTIONS
-            return True
-        return bool(request.user and request.user.is_staff)
-```
-
-### Applying Permissions
-
-#### Products & Collections
-
-```py
-permission_classes = [IsAdminOrReadOnly]
-```
-
-- Anonymous: Read only.
-- Admin: Full access.
-
-#### Shopping Carts
-
-- No restrictions (anyone can create a cart).
-
-#### Customers
-
-- Switch to `ModelViewSet` for all operations.
-- Default permission:
-
-  ```py
-  permission_classes = [IsAdminUser]
-  ```
-
-- Override for profile access:
-
-  ```py
-      @action(detail=False, methods=['GET', 'PUT'], permission_classes=[IsAuthenticated])
-      def me(...):
-          ...
-  ```
-
-### Testing
-
-- Anonymous user:
-
-  - Products & collections: Can view, cannot modify.
-  - Customers: No access.
-
-- Admin user:
-
-  - Full control over products, collections, and customers.
-
-- Authenticated non-admin:
-
-  - Can access their own customer record.
-
-</details>
 
 ## Applying Model Permissions
 
@@ -794,6 +722,9 @@ So, first we need to do this: [Creating Custom Permissions](https://github.com/s
 > See `store.permissions.ViewCustomerHistoryPermission`.
 
 - Use `permission_classes=[ViewCustomerHistoryPermission]` in `action()` decorator.
+
+> **ALSO, VERY IMPORTANT NOTE:**  
+> Superuser status: Designates that this user has all permissions without explicitly assigning them.
 
 ### Assigning Permissions [Best Practice]
 
