--- a/Notes/Part 2/3. Designing and Implementing a Shopping Cart API.md
+++ b/Notes/Part 2/3. Designing and Implementing a Shopping Cart API.md
@@ -99,11 +99,15 @@ class Meta:
 
 **[Revision] Steps in building an API:** Serializer → View → Route
 
-In serializer's `Meta` class, we need to add following so that `id` is auto-generated instead of required for `POST`/`PUT`/`PATCH`:
+In serializer's `Meta` class, set `id` to read-only so that it is auto-generated instead of required for `POST`:
 
 ```py
         read_only_fields = ["id"]
 ```
+
+But id fields are read-only by default by DRF, right?
+
+> "Model fields which have `editable=False` set, and `AutoField` fields will be set to read-only by default"
 
 [Specifying read only fields](https://www.django-rest-framework.org/api-guide/serializers/#specifying-read-only-fields)
 
