--- a/Notes/Part 2/6. Designing and Building the Orders API.md
+++ b/Notes/Part 2/6. Designing and Building the Orders API.md
@@ -36,7 +36,7 @@
 
 - **OrderItem Serializer**: fields → `id`, `product`, `quantity`, `unit_price`; exclude `order`.
 
-- Add `items` field in `OrderSerializer` using `OrderItemSerializer(many=True)`.
+- Add `orderitem_set` field in `OrderSerializer` using `OrderItemSerializer(many=True)`.
 
 - Nest product data in order items using existing `SimpleProductSerializer`.
 
@@ -46,7 +46,8 @@
 
 **Avoid N-queries:**
 
-Mosh skipped checking the debug toolbar for number of queries, I checked and found out N-queries problem was indeed there (n = number of products).
+Mosh skipped checking the debug toolbar for number of queries, I checked and found out N-queries problem was indeed there (n = number of products).  
+Since we're using `orderitem_set = OrderItemSerializer()` in `OrderSerializer`, and `product = SimpleProductSerializer()` in `OrderItemSerializer`.
 
 **Solution:**
 
@@ -171,6 +172,8 @@ We need a new serializer.
 - Shopping cart is removed after successful order creation.
 - Database remains consistent due to transaction handling.
 
+> I think we should use [Signals](#signals) here as well (like we did (in the end of this section) to create a customer when an user is created instead of putting the customer creation code in user serializer) to adhere to [SOLID's Single responsibility principle](https://en.wikipedia.org/wiki/SOLID#Single_responsibility_principle).
+
 ## Returning the Created Order
 
 - **Problem**: Posting `cart_id` to the server (`/store/orders`) returns the same `cart_id` instead of an order object.
@@ -246,7 +249,7 @@ Add a **`validate_cart_id`** method in serializer.
 
 Restrict order modification permissions so only admins can update or delete orders:
 
-1. **Override** `get_permissions()` in the viewset instead using `permission_classes`.
+1. **Override** `get_permissions()` in the viewset instead of using `permission_classes`.
 
 2. Logic:
 
@@ -255,18 +258,29 @@ Restrict order modification permissions so only admins can update or delete orde
 
 3. Restrict `http_method_names` to `['post', 'get', 'patch', 'delete', 'head', 'options']`.
 
-> Mosh mistakenly left `'post'` out from `http_method_names`.
+> Mosh mistakenly missed `'post'` in `http_method_names`.
 
 ## Updating an Order
 
 **Goal:** Allow only `payment_status` to be updated in an order; all other fields (order time, customer, items) must remain unchanged.
 
-**My Approach (Not Working):**
+**My Approach (Problematic):**
 
 - Add `read_only_fields = ["placed_at", "customer"]` in `OrderSerializer.Meta`.
-- Add `read_only=True` to `OrderSerializer.OrderItemSerializer`.
+- Add `read_only=True` in `OrderSerializer.OrderItemSerializer()`.
 
-**Should've definitely worked** given we've used exactly this in the past as well, but not working for some weird reason. Tried to find why but got nothing. ([Gemini](https://g.co/gemini/share/67a99410815d))
+Problem:  
+In the `Content` input field on browsable API, instead of JSON with just `payment_status`, JSON with absolutely all the fields (like there with `GET`) is coming pre-filled. **Though change is being saved only for the `payment_status` field**, even if I change any other field, it's not being actually reflected, and without any error, with `200 OK`.  
+Here, we're talking about `PUT`/`PATCH` (i.e. on `/store/orders/<id>` pages). If I try with `POST` (i.e. on `/store/orders`) (by uncommenting our currently used `CreateOrderSerializer` from `OrderViewSet.get_serializer_class()`), then it's working correctly! (Just like it works in `CartSerializer`.)  
+Also, note that we're only using `PATCH` (by disallowing `PUT` through `http_method_names`) since we've only one field to update, but if we replace `PATCH` with `PUT`, then browsable API's `HTML form` shows up as well (this feature BTW isn't available with `PATCH` for some reason), which indeed shows just `payment_status`!! (while `Content` input box of `Raw data` form still shows all the fields.)
+
+Here're the reasons (Gemini) (Just read TLDR sections): [Try 1](https://g.co/gemini/share/3ae214c96628), [Try 2](https://g.co/gemini/share/f092feaa999d) (Got same answers)  
+Conclusion as far as my understanding goes: It boils down to DRF's implementation. They could've improved it to eliminate above issue(s) by:
+
+- Taking read only settings in account to not include those fields in `Content` input box, just like they're already doing in `HTML form` with `PUT`.
+- Show `HTML form` with `PATCH` as well: Show all the writable fields just like done with `PUT`, but send only those fields in the request whose values are changed. Improve UX by making this evident by keeping all the fields a bit faded initially, then making opacity normal if a field is changed. (If a field is changed back to the current value, fade it back.)
+
+<br>
 
 **Mosh's Approach:**
 
@@ -291,12 +305,12 @@ We want `Customer` to automatically be created when `User` is created.
 
 **Initial Fix (not ideal):**
 
-- Override `save()` in `CustomUserCreateSerializer` to create a `Customer` when a `User` is saved.
+- Override `save()` in `core.serializers.CustomUserCreateSerializer` to create a `Customer` when a `User` is saved.
 - Drawback: Serializer becomes overloaded with responsibilities → harder to maintain.
 
 **Better Fix – Use Signals:**
 
-- Django provides signals like `pre_save`, `post_save`, `pre_delete`, `post_delete`, and so on to trigger actions at specific model lifecycle events.
+- Django provides signals like `pre_save`, `post_save`, `pre_delete`, `post_delete`, and so on, to trigger actions at specific model lifecycle events.
 
 - Current issue:
 
@@ -327,8 +341,8 @@ We want `Customer` to automatically be created when `User` is created.
 
 ## Creating Custom Signals
 
-- Every Django model fires built-in signals (e.g., `post_save`), but you can also create **custom signals** for app-specific events.
-- Example: Fire an `order_created` signal whenever a new order is placed in the **store** app.
+- Every Django model fires built-in signals (e.g., `post_save`), but we can also create **custom signals** for app-specific events.
+- Example: Fire an `order_created` signal manually whenever a new order is placed in the **store** app.
 
 **Implementation:**
 
@@ -341,11 +355,9 @@ We want `Customer` to automatically be created when `User` is created.
      order_created = Signal()
      ```
 
-2. **Fire the signal in `CreateOrderSerializer`**:
-
-   - In the end (after order creation & cart deletion):
-
-     ```py
+2. **Fire the signal in `CreateOrderSerializer.save`**:
+ 
+   - ```py
      from .signals import order_created
      order_created.send_robust(sender=self.__class__, order=order)
      ```
@@ -371,4 +383,4 @@ We want `Customer` to automatically be created when `User` is created.
 **Outcome:**
 
 - When an order is created in **store**, `order_created` is fired.
-- Any app (e.g., **core**) listening to it receives the `order` object and can react.
+- Any app listening to it receives the `order` object and can react.
