--- a/Notes/Part 2/2. Advanced API Concepts.md
+++ b/Notes/Part 2/2. Advanced API Concepts.md
@@ -165,6 +165,12 @@ Use [`DefaultRouter`](https://www.django-rest-framework.org/api-guide/routers/#d
 1. Dynamic fetching of reviews based on current product id using `get_queryset`
 2. On creation of a review, auto-adding of current product (which is a related field) based on the endpoint, using `get_serializer_context`, `create`
 
+```py
+    def create(self, validated_data):
+        # return Review.objects.create(product_id=self.context["product_id"], **validated_data)
+        return super().create(validated_data | {"product_id": self.context["product_id"]})
+```
+
 **Note:** Not sure what's the reason but Mosh taught the wrong way, we should not repeat the logic in the overridden method.  
 **Read Gemini:** [1](https://g.co/gemini/share/4bfcb96cc571), [2](https://g.co/gemini/share/bd09cdc28393)
 
