--- a/Notes/Part 3/1. Uploading Files.md
+++ b/Notes/Part 3/1. Uploading Files.md
@@ -26,15 +26,12 @@
 
 - `static` serves media files only when `DEBUG=True`.
 
+- Important: This method is only for **development**. Production requires a different strategy (covered later).
+
 ### Test
 
 - Place a sample file (e.g., `car.jpg`) in `media`.
-- Access via `http://localhost:8000/media/car.jpg`.
-
-### Important
-
-- This method is only for **development**.
-- Production requires a different strategy (covered later).
+- Access via [`/media/car.jpg`](http://localhost:8000/media/car.jpg).
 
 ## Adding Images to Products
 
@@ -49,9 +46,10 @@ Create a new model `ProductImage` with fields:
   - Ensure images are deleted with product.
 
 - `image = models.ImageField(upload_to='store/images')`
-  - Validates uploaded files are images.
+
+  - `ImageField` validates uploaded files are images.
   - Provides extra properties (`width`, `height`).
-  - Stores file path in DB, file itself in filesystem under `MEDIA_ROOT/store/images/`.
+  - Note that **file path** is stored in DB, file itself in filesystem under `MEDIA_ROOT/store/images/`.
 
 ### Image vs File Field
 
@@ -78,12 +76,12 @@ Run `makemigrations` & `migrate`.
 ## Building an API to Upload Images
 
 - **Goal:** Implement nested endpoint `/product/<id>/images/<id>` for product images.
-- **API building blocks needed:** Serializer > ViewSet > Router
+- **API building blocks:** Serializer > ViewSet > Router
 
 ### Serializer (`ProductImageSerializer`)
 
 - `Meta`: `model = ProductImage`, `fields = ['id', 'image']`.
-- **Exclude `product_id`** since it's already in the URL.
+- **Not including `product`** since it's already in the URL.
 
 ### ViewSet (`ProductImageViewSet`)
 
@@ -101,7 +99,7 @@ Run `makemigrations` & `migrate`.
 Register nested route:
 
 ```py
-router.register('images', ProductImageViewSet, basename='product-images')
+product_router.register('images', ProductImageViewSet, basename='product-images')
 ```
 
 ### Error Fix
@@ -121,14 +119,15 @@ And in `ProductImageSerializer`, override `create` to attach product_id from con
 
 ```py
 def create(self, validated_data):
-    return ProductImage.objects.create(product_id=self.context['product_id'], **validated_data)
+    # return ProductImage.objects.create(product_id=self.context['product_id'], **validated_data)
+    return super().create(validated_data | {"product_id": self.context["product_id"]})
 ```
 
-> **NOTE THAT THIS WHOLE SECTION WAS EXACTLY THE SAME AS [Building the Reviews API](https://github.com/samyak1409/ultimate-django/blob/main/Notes/Part%202/2.%20Advanced%20API%20Concepts.md#building-the-reviews-api--nested-routers).**
+> **NOTE THAT THIS WHOLE SECTION WAS EXACTLY THE SAME AS [Building the Reviews API](/Notes/Part%202/2.%20Advanced%20API%20Concepts.md#building-the-reviews-api--nested-routers).**
 
 ### Result
 
-- Now, with everything in place, we can upload images using `POST /store/products/1/images`
+- Now, with everything in place, we can upload images using `POST /store/products/<id>/images`
 - Uploaded images stored in `MEDIA_ROOT/store/images/`.
 - If duplicate filename, Django automatically appends unique suffix (to prevent overwrite).
 
@@ -148,17 +147,19 @@ def create(self, validated_data):
 
 - Products now return an `images` property (list of images with ID + URL).
 
+- By default:
+  - On `images` endpoint (`/store/products/<id>/images`), only path is showing (`"image": "/media/store/images/<name>"`).
+  - But on `products` endpoint (`/store/products`), full url (`"image": "http://127.0.0.1:8000/media/store/images/<name>"`).
+
 ### Fix N+1
 
-Without optimization → Django runs **duplicate queries** (N+1 problem).
+Without optimization → Django runs **extra queries** (N+1 problem).
 
 In `ProductViewSet`, use:
 
 ```py
 queryset = Product.objects.prefetch_related('productimage_set')
 ```
-
-This reduces DB hits.
 
 ## Validating Uploaded Files
 
@@ -178,7 +179,7 @@ This reduces DB hits.
   2. Define `validate_product_image_size(image)`.
 
      - Set `MAX_PRODUCT_IMAGE_SIZE_KB`.
-     - If `file.size > MAX_PRODUCT_IMAGE_SIZE_KB * 1024` → raise `ValidationError('error message...')`.
+     - If `file.size > MAX_PRODUCT_IMAGE_SIZE_KB * 1024` → raise `ValidationError('Error message...')`.
 
   3. Apply validator in model field, add param:
 
@@ -208,7 +209,7 @@ This reduces DB hits.
 
 - Mosh has used a **basic JavaScript client project** for uploading product images.
 
-  > But I converted that to a single HTML file using Gemini, keeping all functionality exactly the same.  
+  > But I converted that to a single HTML file <!-- using Gemini -->, keeping all functionality exactly the same.  
   > (So that Node.js, etc. are not required.)
 
 - Purpose: Show how client + server integration works.
@@ -234,7 +235,7 @@ And we've not allowed any domain to access our resources.
 
 2. Add `"corsheaders"` to `INSTALLED_APPS`.
 
-3. Add middleware: `"corsheaders.middleware.CorsMiddleware"` **at the top**. (See: [Order of Middlewares](https://github.com/samyak1409/ultimate-django/blob/main/Notes/Part%203/7.%20Preparing%20for%20Production.md#order-of-middlewares))
+3. Add middleware: `"corsheaders.middleware.CorsMiddleware"` **at the top**. (See: [Order of Middlewares](/Notes/Part%203/7.%20Preparing%20for%20Production.md#order-of-middlewares))
 
 4. [Configure allowed origins](https://github.com/adamchainz/django-cors-headers?tab=readme-ov-file#configuration):
 
@@ -280,7 +281,8 @@ On upload, browser sends **two requests**:
 2. **Register inline**
 
    - Add `ProductImageInline` to `inlines` in `ProductAdmin`.
-   - **IMP:** Also add it in `core` app’s `ProductCustomAdmin`, since it overrides `inlines`. (Then why do we need in `ProductAdmin`? Think.)
+   - ~~Also add it in `core` app’s `ProductCustomAdmin`.~~ - Again, wrong by Mosh. **Violates: DRY Principle**
+   - Correct way: Override: `inlines = list(ProductAdmin.inlines) + [TaggedItemInline]` (Confirmed from [Gemini](https://g.co/gemini/share/368158fbab70) (Read TLDRs))
 
 > With that in place, now we can see product images (urls) in inline table. But, we can also set to show (render) the images there itself.
 
@@ -293,7 +295,7 @@ On upload, browser sends **two requests**:
 
 > With that in place, now everything works like required!
 
-> But, as we know it's not a good practice to add css inline, we should instead use dedicated css file.
+> But, as we know it's not a good practice to add CSS inline, we should instead use dedicated CSS file.
 
 4. **CSS file**
 
@@ -317,6 +319,5 @@ On upload, browser sends **two requests**:
 > - The `manage.py collectstatic` command copies all static files from all your apps into a single folder for deployment (`STATIC_ROOT`).
 > - Without namespacing, files with the same name (e.g., `styles.css`) from different apps will overwrite each other during this process.
 > - Creating an extra subdirectory with the app's name (e.g., `static/store/`) solves this by ensuring every file has a unique path.
-> - You use the `{% static 'store/styles.css' %}` tag in your templates to correctly load the namespaced files.
 >
 > \- [Gemini](https://g.co/gemini/share/73e20a46eaea)
