change repo link from abs to rel

--- a/Notes/Part 1/1. Django Fundamentals.md
+++ b/Notes/Part 1/1. Django Fundamentals.md
@@ -209,7 +209,7 @@ Docs: [Installation](https://django-debug-toolbar.readthedocs.io/en/latest/insta
 
 - While adding to installed apps and middleware, use `if DEBUG` / `settings/dev.py`.
 
-  See: [Order of Middlewares](https://github.com/samyak1409/ultimate-django/blob/main/Notes/Part%203/7.%20Preparing%20for%20Production.md#order-of-middlewares)
+  See: [Order of Middlewares](/Notes/Part%203/7.%20Preparing%20for%20Production.md#order-of-middlewares)
 
 ### Not showing on some pages?
 
