--- a/Notes/Part 2/5. Securing APIs.md
+++ b/Notes/Part 2/5. Securing APIs.md
@@ -616,7 +616,7 @@ Notice:
 
 Currently, **all admin (`is_staff`) users** can manage customers via the `customers` endpoint.
 
-But as you might remember, in [4. Django Authentication System > Groups and Permissions](https://github.com/samyak1409/ultimate-django/blob/main/Notes/Part%202/4.%20Django%20Authentication%20System.md#groups-and-permissions), we created a `Customer Service` group in Django admin.
+But as you might remember, in [4. Django Authentication System > Groups and Permissions](/Notes/Part%202/4.%20Django%20Authentication%20System.md#groups-and-permissions), we created a `Customer Service` group in Django admin.
 
 To allow only the users in this group to access `customers` endpoint, we can use `permissions.DjangoModelPermissions`.
 
@@ -643,7 +643,7 @@ Maps **HTTP methods** to **required model permissions**:
 - `PUT`, `PATCH` → `change` permission.
 - `DELETE` → `delete` permission.
 
-These `add`, `change`, `delete`, `view` permissions are [Built-in Permissions](https://github.com/samyak1409/ultimate-django/blob/main/Notes/Part%202/4.%20Django%20Authentication%20System.md#built-in-permissions).
+These `add`, `change`, `delete`, `view` permissions are [Built-in Permissions](/Notes/Part%202/4.%20Django%20Authentication%20System.md#built-in-permissions).
 
 ### Outcome
 
@@ -685,7 +685,7 @@ We can achieve this by following.
 
 ### Custom Model Permission
 
-So, first we need to do this: [Creating Custom Permissions](https://github.com/samyak1409/ultimate-django/blob/main/Notes/Part%202/4.%20Django%20Authentication%20System.md#creating-custom-permissions)
+So, first we need to do this: [Creating Custom Permissions](/Notes/Part%202/4.%20Django%20Authentication%20System.md#creating-custom-permissions)
 
 <details>
 <summary>See</summary>
