--- a/Notes/Part 3/5. Performance Testing.md
+++ b/Notes/Part 3/5. Performance Testing.md
@@ -161,7 +161,7 @@ Summary: Locust simulates real-world user flows (browse, view, add to cart), ass
 
   - Use `select_related` / `prefetch_related` → reduce extra queries.
   - Use `only()` → fetch only required fields.
-  - Use `defer()` → skip heavy fields not needed immediately. (See [Django ORM > Deferring Fields](https://github.com/samyak1409/ultimate-django/blob/main/Notes/Part%201/4.%20Django%20ORM.md#deferring-fields))
+  - Use `defer()` → skip heavy fields not needed immediately. (See [Django ORM > Deferring Fields](/Notes/Part%201/4.%20Django%20ORM.md#deferring-fields))
   - Use `values()` / `values_list()` → return (QuerySet of) dicts/lists instead of (QuerySet of) full model objects (cheaper).
   - Use `count()` instead of fetching all objects (`all()`) and calling `len()`.
   - Use `bulk_create()` / `bulk_update()` instead of looping inserts/updates → fewer DB roundtrips.
@@ -208,7 +208,7 @@ Summary: Locust simulates real-world user flows (browse, view, add to cart), ass
   So add middleware, installed app, and url pattern under **`if DEBUG`** / `settings/dev.py`.
 
   1. `pipenv install --dev django-silk`
-  2. Add middleware (`'silk.middleware.SilkyMiddleware'`) (See: [Order of Middlewares](https://github.com/samyak1409/ultimate-django/blob/main/Notes/Part%203/7.%20Preparing%20for%20Production.md#order-of-middlewares))
+  2. Add middleware (`'silk.middleware.SilkyMiddleware'`) (See: [Order of Middlewares](/Notes/Part%203/7.%20Preparing%20for%20Production.md#order-of-middlewares))
   3. Add `'silk'` to `INSTALLED_APPS`.
   4. Add URLs: `path('silk/', include('silk.urls', namespace='silk'))`
   5. `python manage.py migrate`
