--- a/Notes/Part 3/6. Caching.md
+++ b/Notes/Part 3/6. Caching.md
@@ -75,7 +75,7 @@ Always run a **performance test first** to establish a baseline before optimizin
 
 ## Installing Redis
 
-[Already installed.](https://github.com/samyak1409/ultimate-django/blob/main/Notes/Part%203/3.%20Running%20Background%20Tasks.md#installing-redis)
+[Already installed.](/Notes/Part%203/3.%20Running%20Background%20Tasks.md#installing-redis)
 
 - Before configuring caching, ensure `redis` is running:
 
