--- a/Notes/Part 3/7. Preparing for Production.md
+++ b/Notes/Part 3/7. Preparing for Production.md
@@ -207,7 +207,7 @@ See code in `playground.views.test_logging()`.
    - **Allowed hosts** → only required in prod (to server domain/IP).
    - **Database config** → dev: Postgres localhost; prod: DB connection string.
    - **Installed apps** → keep in common; dev: append `debug_toolbar`, `silk`
-   - **Middlewares** → keep in common; dev: insert `DebugToolbar` at 0, append `Silky` (See: [Order of Middlewares](https://github.com/samyak1409/ultimate-django/blob/main/Notes/Part%203/7.%20Preparing%20for%20Production.md#order-of-middlewares))
+   - **Middlewares** → keep in common; dev: insert `DebugToolbar` at 0, append `Silky` (See: [Order of Middlewares](/Notes/Part%203/7.%20Preparing%20for%20Production.md#order-of-middlewares))
 
 5. For now, all other configs stay in `common.py`.
 
