--- a/Notes/Part 3/2. Sending Emails.md
+++ b/Notes/Part 3/2. Sending Emails.md
@@ -10,7 +10,7 @@
 
 ### Installation (with Docker)
 
-> Out of [installation options](https://github.com/rnwood/smtp4dev/wiki/Installation), this is the most recommended one. (Simple, reliable, professional-grade.)
+> Out of [installation options](https://github.com/rnwood/smtp4dev/blob/master/docs/Installation.md), this is the most recommended one. (Simple, reliable, professional-grade.)
 
 1. Install/run [Docker Desktop](https://www.docker.com/products/docker-desktop).
 
@@ -18,11 +18,13 @@
 
 2. Run:
 
-   ([How to run smtp4dev in Docker](https://github.com/rnwood/smtp4dev/wiki/Installation#how-to-run-smtp4dev-in-docker))
+   ([How to run smtp4dev in Docker](https://github.com/rnwood/smtp4dev/blob/master/docs/Installation.md#how-to-run-smtp4dev-in-docker))
 
    ```sh
    docker run --rm -it -p 5000:80 -p 2525:25 rnwood/smtp4dev
    ```
+
+   (Understand the cmd: [Gemini](https://g.co/gemini/share/0db7331ae8c3))
 
    With this, SMTP server will listen on port `2525` (configure `EMAIL_PORT` in Django settings to use this).
 
@@ -38,7 +40,7 @@ How to see what's using a port number:
 lsof -i :5000
 ```
 
-**SOLUTION: Just use a different port number.**
+**SOLUTION: Just use a different port number. (e.g. `3000`)**
 
 ## Configuring the Email Backend
 
@@ -68,9 +70,9 @@ lsof -i :5000
 
   - `EMAIL_PORT` → default: `25`; fake SMTP often runs on `2525`.
 
-  - `DEFAULT_FROM_EMAIL` → optional (e.g., `from@example.com`).
+  - `DEFAULT_FROM_EMAIL` → optional, id from which mails would be sent (e.g., `general@samyakstore.com`), can be overridden in mail functions (`send_mail()`).
 
-Docs: [Email backends](https://docs.djangoproject.com/en/5.2/topics/email/#email-backends)
+Django Docs: [Email backends](https://docs.djangoproject.com/en/5.2/topics/email/#email-backends)
 
 ## Sending Emails
 
@@ -93,7 +95,7 @@ Docs: [Email backends](https://docs.djangoproject.com/en/5.2/topics/email/#email
         subject="Testing",
         message="Hello there!",
         from_email=None,
-        recipient_list=["samyak65400@gmail.com"],
+        recipient_list=["customer@gmail.com"],
     )
     ```
   - We can also send html message using `html_message` param, e.g., `html_message="<h1>Hello there!</h1>"`
@@ -113,12 +115,12 @@ Docs: [Email backends](https://docs.djangoproject.com/en/5.2/topics/email/#email
 
 - **Testing Email**
 
-  - Use `smtp4dev` (runs on [localhost:3000](http://localhost:3000)) to inspect outgoing test emails.
+  - Use `smtp4dev` (running on [localhost:3000](http://localhost:3000)) to inspect outgoing test emails.
 
 - **Using `mail_admins`**
 
   ```py
-  mail_admins(subject="Something", message="Hello admin!")
+  mail_admins(subject="Testing", message="Hello admin!")
   ```
 
   Similar to `send_mail`, but:
@@ -186,7 +188,7 @@ Now, since mail templates are templates, we can add a new dir `mails` in the `te
 ```py
 from templated_mail.mail import BaseEmailMessage
 
-BaseEmailMessage(context={"name": "Samyak"}, template_name="mails/hello.html").send(to=["someone@gmail.com"])
+BaseEmailMessage(context={"name": "Samyak"}, template_name="playground/mails/hello.html").send(to=["customer@gmail.com"])
 ```
 
 **Best Practices:** Always **namespace templates** inside category-specific folders to increase clarity.
